# data-science

./: .gitignore  README.md  pyproject.toml
mlruns/.trash/278812143094534389/: meta.yaml
mlruns/0/: meta.yaml
mlruns/402047761966909601/: meta.yaml
mlruns/402047761966909601/090ae7b0d0e9434eb1fe7aae51e27535/: meta.yaml
mlruns/402047761966909601/090ae7b0d0e9434eb1fe7aae51e27535/metrics/: valid_mae  valid_mse  valid_r_squared  valid_rmse
mlruns/402047761966909601/090ae7b0d0e9434eb1fe7aae51e27535/tags/: mlflow.runName  (+1 more)
mlruns/402047761966909601/0cf9c7c7a29746b3810d1e214d20ddb2/: meta.yaml
mlruns/402047761966909601/11c1e7ebb9b84a69a4bd40417a77fd7c/: meta.yaml
mlruns/402047761966909601/1c7d74fd771b4ccb8b25eed8503a7c90/: meta.yaml
mlruns/402047761966909601/1f8d79ff10ef4141a0670a5e54fb7fbe/: meta.yaml
mlruns/402047761966909601/25ebfb69b5254ab7b7e5aa7cf5895021/: meta.yaml
mlruns/402047761966909601/28a3d0ffa27747cca0c444c704d3ae71/: meta.yaml
mlruns/402047761966909601/556476e6537347089990cca25407cac9/: meta.yaml
mlruns/402047761966909601/56b1fb7d421d4d11996c0f4ec8592e1c/: meta.yaml
mlruns/402047761966909601/90a1ad27ccce4a469ae8a5342a4bd733/: meta.yaml
mlruns/402047761966909601/a4a0efc4c6d74108ab064b11a146e2fd/: meta.yaml
mlruns/402047761966909601/d693ca70d59248e4aa81eddaafb48df9/: meta.yaml
mlruns/402047761966909601/de29fa11036144699c8f12bc60ae1e2d/: meta.yaml
mlruns/402047761966909601/eec1be61e5444580bb6f03f1cc4796bb/: meta.yaml
mlruns/402047761966909601/fb83bc35e72b485ba0674f116a268f1d/: meta.yaml
notebooks/regression/: car_sales.ipynb
(+100 files in other folders)
