[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sean Daly", email = "the_sean_c@fastmail.com"},
]
dependencies = [
    "ipykernel>=6.27.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "numpy>=1.26.2",
    "polars>=0.19.15",
    "scikit-learn>=1.3.2",
    "statsmodels>=0.14.0",
    "httpx>=0.25.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "kaggle>=1.5.16",
    "mlflow>=2.8.1",
    "setuptools>=69.0.2",
    "mapie>=0.7.0",
    "xgboost>=2.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GNU AGPLv3"}

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.6",
]
